新增部分方法